--- a/web.html
+++ b/web.html
@@ -8,8 +8,12 @@
 <body>
     <div>
         <h1> 
-            Hola queridos estudiantes
+            Hola queridos estudiantes, my nma es Vladimir
         </h1>  
+        <h2> 
+            Hola queridos estudiantes, verificaremos que los cambios realicen
+        </h2>  
+        
     </div>    
 </body>
 </html>
