--- a/web.html
+++ b/web.html
@@ -11,8 +11,11 @@
             Hola queridos estudiantes, my nma es Vladimir
         </h1>  
         <h2> 
-            Hola queridos estudiantes, verificaremos que los cambios realicen
+            Hola queridos estudiantes, verificaremos que los cambios realicen. 
         </h2>  
+        <h3> 
+            Tercer cambio
+        </h3>  
         
     </div>    
 </body>
